Fixed layout issue with trailer

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -90,8 +90,8 @@ nav {
 .video {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
     height: 0;
+    clear: both;
 }
 .video iframe {
 	position: absolute;
